<resources>

    <string name="app_name">Sensation! sensor logger</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Sensation! Sensor logger</string>

    <!-- Button labels -->
    <string name="accept_eula">Agree and START</string>

    <!-- Text Labels -->
    <string name="join_service_text">Join the service</string>
    <string name="phone_id_text">Phone ID</string>
    <string name="gender_text">Gender</string>
    <string name="age_label">Age</string>
    <string name="i_agree_label">I agree to the terms of service.</string>
    <string name="view_tos_label"><u>View TOS</u></string>

    <!-- Radio Button Labels -->
    <string name="gender_male">♂</string>
    <string name="gender_female">♀</string>

    <!-- TOS alert -->
    <string name="tos_alert_title">Have you gone BANANAS?</string>
    <string name="tos_alert_text">Nobody reads the TOS. Never.</string>
    <string name="tos_alert_button_yes">Read it</string>
    <string name="tos_alert_button_no">Never mind</string>
    <string name="tos_alert_no_toast">Saved by the bell! Good idea.</string>

    <!-- TOS page -->
    <string name="tos_activity_title">Terms of Service</string>
    <string name="tos_activity_url">https://sites.google.com/site/edgeofinternet/agreement</string>
    <string name="title_activity_sensor_management">Manage Sensor Logging</string>

    <!-- Sensor Management Activity -->
    <string name="sensor_management_title">Manage Sensor Logging</string>
    <string name="sensor_management_all_on">All ON</string>
    <string name="sensor_management_all_off">All OFF</string>
    <string name="sensor_management_more_data">More…</string>
    <string name="sensor_management_accelerometer_label">Accelerometer</string>
    <string name="sensor_management_accelerometer_toggle_tag">sample_accelerometer_on</string>
    <string name="sensor_management_gps_label">GPS</string>
    <string name="sensor_management_gps_toggle_tag">sample_gps_on</string>
    <string name="sensor_management_cell_location_label">Cell Location</string>
    <string name="sensor_management_cell_location_toggle_tag">sample_cell_location_on</string>
    <string name="sensor_management_gyro_label">Gyro</string>
    <string name="sensor_management_gyro_toggle_tag">sample_gyro_on</string>
    <string name="sensor_management_update_frequency_label">Update frequency</string>
    <string name="sensor_management_upload_frequency_label">Upload frequency (HH:MM)</string>
    <string name="sensor_management_update_now_button">Update now</string>
    <string name="sensor_management_thread_counter">Thread inactive - no updates</string>
    

    <string-array name="sensor_management_update_frequency">
        <item>Normal</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>

    <!-- Preferences keys -->
    <string name="is_first_time_preferences_set">first_time_preferences</string>
    <string name="title_activity_location_sensor_page">Cellular Location Sensor</string>
    <string name="title_activity_cellular_location_log">CellularLocationLogActivity</string>
    
    <!-- Cellular Location Activity -->
    <string name="cellular_location_activity_text_view_title">Cellular Location Log</string>
    <string name="cellular_last_location_time_title">Last sample time:</string>
    <string name="cellular_last_location_location_title">Last sample reading:</string>
    <string name="cellular_location_lat_lon_text_placeholder">N/A</string>
    <string name="cellular_location_number_of_readings_text_label">Number of Readings:</string>
    
    <!-- Service -->
    <string name="local_service_started">Logging your sensors, behind the curtain</string>
    <string name="local_service_stopped">Local Service Stopped!</string>
    <string name="local_service_label">Sensors App Logger on</string>
    <string name="local_service_connected">Local Service Connected!</string>
    <string name="local_service_disconnected">Local Service Disconnected (you should never see me)!</string>
    <string name="local_service_name">Background local service</string>
    
    <!-- Logger data object -->
    <string name="logger_data_object">LoggerDataObject</string>
</resources>